cryptsetup (2:1.2.0-1) experimental; urgency=low

  * NOT RELEASED YET
  * new major upstream release (closes: #603804)
    - adds text version of FAQ
    - adds new options --use-random and --use-urandom for MK generation
    - fixes luksRemoveKey to not ask for remaining keyslot passphrase
    - no longer supports luksDelKey command (replaced by luksKillSlot)
    - no longer supports reload command, dmsetup reload should be used instead
    - adds support to change the UUID later (with --uuid cmd option)
    - adds --dump-master-key option for luksDump command
    - no luksOpen, luksFormat and create for open devices (closes: #600208)
    - remove debian/patches/01_manpage.patch, incorporated upstream
    - and many more changes, see upstream changelog for further information
    - update debian/libcryptsetup1.symbols 
  * invoke update-initramfs at cryptsetup removal in order to not leave behind
    a broken initramfs. thanks to ubuntu for the hint.
  * link dynamically against libgcrypt11 and libgpg-error0 now that the
    libraries have been moved to /lib. add versioned depends for libcryptsetup1
    on (libgcrypt >= 1.4.6-2) and libgpg-error0 (>= 1.10-0.1).
  * debian/initramfs/cryptroot-script: prereq 'cryptroot-prepare' added in
    order to support cryptroot to depend on custom initramfs scripts. thanks
    to Marc Haber for the suggestion. (closes: #601311)
  * debian/cryptdisks.functions:
    + fix check for ownership and permissions of $key to work with slighly
      different output of 'ls -l' with selinux enabled. (closes: #600522)
    + fix $TRIES implementation to support TRIES=0 again. (closes: #602501)

 -- Jonas Meurer <mejo@debian.org>  Sun, 26 Dec 2010 14:43:59 +0100

cryptsetup (2:1.1.3-4) unstable; urgency=high

  * bump standards-version to 3.9.1, no changes required
  * add patches/01_manpage_units: mention units (512b sectors) for -o option
    in man page. (closes: #584174)