@@ -28,22 +28,6 @@ Description: configures encrypted block devices
  file /etc/crypttab. Additional features are cryptoroot support through
  initramfs-tools and several supported ways to read a passphrase or key.
 
-Package: cryptsetup-udeb
-Section: debian-installer
-XC-Package-Type: udeb
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, dmsetup-udeb
-Description: configures encrypted block devices
- Cryptsetup provides a command-line interface for configuring encrypted
- devices. This is done using the Linux kernel device mapper target
- dm-crypt. This version of cryptsetup has integrated support for LUKS.
- .
- cryptsetup is backwards compatible with the on-disk format of cryptoloop,
- but also supports more secure formats. This package includes support for
- automatically configuring encrypted devices at boot time via the config
- file /etc/crypttab. Additional features are cryptoroot support through
- initramfs-tools and several supported ways to read a passphrase or key.
-
 Package: libcryptsetup1
 Section: libs
 Architecture: any
@@ -65,3 +49,31 @@ Description: libcryptsetup development files
  dm-crypt. This version of cryptsetup has integrated support for LUKS.
  .
  This package provides the libcryptsetup development files.
+
+Package: cryptsetup-udeb
+Section: debian-installer
+XC-Package-Type: udeb
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, dmsetup-udeb
+Description: configures encrypted block devices
+ Cryptsetup provides a command-line interface for configuring encrypted
+ devices. This is done using the Linux kernel device mapper target
+ dm-crypt. This version of cryptsetup has integrated support for LUKS.
+ .
+ cryptsetup is backwards compatible with the on-disk format of cryptoloop,
+ but also supports more secure formats. This package includes support for
+ automatically configuring encrypted devices at boot time via the config
+ file /etc/crypttab. Additional features are cryptoroot support through
+ initramfs-tools and several supported ways to read a passphrase or key.
+
+Package: libcryptsetup1-udeb
+Section: debian-installer
+XC-Package-Type: udeb
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, libgpg-error0-udeb (>= 1.10-0.2), libgcrypt11-udeb (>= 1.4.6-3)
+Description: configures encrypted block devices
+ Cryptsetup provides a command-line interface for configuring encrypted
+ devices. This is done using the Linux kernel device mapper target
+ dm-crypt. This version of cryptsetup has integrated support for LUKS.
+ .
+ This package provides the libcryptsetup shared library.
