@@ -71,7 +71,6 @@ install-stamp: build-stamp
 	dh_testroot
 	dh_clean
 	dh_installdirs
-	mkdir -p $(CURDIR)/debian/cryptsetup-udeb/
 	$(MAKE) DESTDIR=$(CURDIR)/debian/cryptsetup install
 
 	# Copy library files to library packages
@@ -85,8 +84,9 @@ install-stamp: build-stamp
 		$(CURDIR)/debian/libcryptsetup-dev/usr/lib/pkgconfig/
 	cp -a $(CURDIR)/debian/cryptsetup/usr/include/libcryptsetup.h \
 		$(CURDIR)/debian/libcryptsetup-dev/usr/include/
-	cp -a $(CURDIR)/debian/cryptsetup/lib/libcryptsetup.so.1* \
+	cp -a $(CURDIR)/debian/cryptsetup/lib/libcryptsetup.so.* \
 		$(CURDIR)/debian/libcryptsetup1/lib/
+	dh_link -plibcryptsetup-dev lib/libcryptsetup.so.1 usr/lib/libcryptsetup.so
 
 	# Remove libraries from cryptsetup package, they're shiped in seperate library packags
 	rm -rf $(CURDIR)/debian/cryptsetup/lib/libcryptsetup*
@@ -125,6 +125,16 @@ install-stamp: build-stamp
 		$(CURDIR)/debian/cryptsetup/usr/share/bug/cryptsetup
 	touch $@
 
+	# Copy relevant parts to cryptsetup-udeb package
+	mkdir -p $(CURDIR)/debian/cryptsetup-udeb/
+	cp -a $(CURDIR)/debian/cryptsetup/etc $(CURDIR)/debian/cryptsetup-udeb/
+	mkdir $(CURDIR)/debian/cryptsetup-udeb/sbin/
+	cp -a $(CURDIR)/debian/cryptsetup/sbin/cryptsetup $(CURDIR)/debian/cryptsetup-udeb/sbin/
+
+	# Copy relevant parts to libcryptsetup1-udeb package
+	mkdir -p $(CURDIR)/debian/libcryptsetup1-udeb/
+	cp -a $(CURDIR)/debian/libcryptsetup1/lib $(CURDIR)/debian/libcryptsetup1-udeb/
+
 binary-indep: build install
 # We have nothing to do by default.
 
@@ -137,11 +147,6 @@ binary-arch: build install
 	dh_installinit -a --no-start --name=cryptdisks-early --update-rcd-params="start 26 S . start 59 0 6 ."
 	dh_installinit -a --no-start --name=cryptdisks --update-rcd-params="start 28 S . start 48 0 6 ."
 	dh_installman -a debian/doc/crypttab.5 debian/doc/cryptdisks_start.8 debian/doc/cryptdisks_stop.8 debian/luksformat.8
-	# Copy relevant parts to cryptsetup-udeb package
-	cp -a $(CURDIR)/debian/cryptsetup/etc $(CURDIR)/debian/cryptsetup-udeb/
-	cp -a $(CURDIR)/debian/cryptsetup/lib $(CURDIR)/debian/cryptsetup-udeb/
-	mkdir $(CURDIR)/debian/cryptsetup-udeb/sbin/
-	cp -a $(CURDIR)/debian/cryptsetup/sbin/cryptsetup $(CURDIR)/debian/cryptsetup-udeb/sbin/
 	dh_lintian -a
 	dh_compress -a
 	dh_fixperms -a
